# hexlet-django-blog

./: pyproject.toml
hexlet_django_blog/hexlet_django_blog/: settings.py  urls.py
